add zoom and grayscale

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         <div class="fade">What do pandas drink?<br />Bambooze</div>
     </div>
 
+    <br /><br /><br />
+
+    <div class="image-container zoom">
+        <img src="image-four.jpg" alt="Image Four" class="primary-image" />
+    </div>
+
+    <br /><br /><br />
+
+    <div class="image-container grayscale">
+        <img src="image-five.jpg" alt="Image Five" class="primary-image" />
+    </div>
+
 </body>
 
 </html>
